# stara

./: .gitmodules  CITATION.cff  README.md  language_tag.py
libs/nuitka/: .gitignore  pyproject.toml
libs/nuitka/stara_astar_nuitka/: astar_nuitka.py
libs/numba/: pyproject.toml
libs/numba/stara_astar_numba/: astar_numba.py
tools/maze_generator/: .gitignore  README.md  pyproject.toml
tools/maze_generator/stara_maze_generator/: cli.py  visualization.py  vmaze.py
tools/maze_generator/stara_maze_generator/pathfinder/: __init__.py  base.py  bfs.py  types.py
tools/maze_generator/tests/: conftest.py  test_base.py  test_bfs.py  test_vmaze.py
