[tool.poetry]
name = "stara-astar-numba"
version = "0.1.0"
description = ""
authors = ["Valerius Mattfeld <mail@valerius.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
stara-maze-generator = { git = "https://github.com/valerius21/Stara-Maze-Generator.git", branch = "numpy-2.1.3" }
numba = "0.61.0rc2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
